--- a/d3demo.html
+++ b/d3demo.html
@@ -9,8 +9,7 @@
 
 <body>
 
-    <div class="chart animated fadeInLeft">
-    </div>
+    <div class="chart animated fadeInLeft"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.min.js"></script>
 
